grammars/.antlr/MiniCParser.java
// Generated from /home/ubuntu/Documents/csc488/assignments/code/grammars/MiniC.g4 by ANTLR 4.13.1

#include <vector>
#include "Program.h"
#include "Declarations.h"
#include "Statements.h"
#include "Exprs.h"
#include "Terms.h"

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, INT=38, CHAR=39, 
		WS=40, COMMENT=41;
	public static final int
		RULE_prog = 0, RULE_preamble = 1, RULE_decl = 2, RULE_vardecl = 3, RULE_scope = 4, 
		RULE_stmtlist = 5, RULE_stmt = 6, RULE_varlist = 7, RULE_varlistentry = 8, 
		RULE_vartype = 9, RULE_rettype = 10, RULE_parameters = 11, RULE_parameterlist = 12, 
		RULE_parameterentry = 13, RULE_expropt = 14, RULE_expr = 15, RULE_var = 16, 
		RULE_arguments = 17, RULE_argumentlist = 18, RULE_varname = 19, RULE_arrayname = 20, 
		RULE_funcname = 21, RULE_parametername = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "preamble", "decl", "vardecl", "scope", "stmtlist", "stmt", "varlist", 
			"varlistentry", "vartype", "rettype", "parameters", "parameterlist", 
			"parameterentry", "expropt", "expr", "var", "arguments", "argumentlist", 
			"varname", "arrayname", "funcname", "parametername"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#include'", "'\"minicio.h\"'", "'('", "')'", "';'", "'{'", "'}'", 
			"'if'", "'else'", "'for'", "'continue'", "'break'", "'return'", "'['", 
			"']'", "','", "'int'", "'bool'", "'char'", "'void'", "'true'", "'false'", 
			"'-'", "'!'", "'*'", "'/'", "'+'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='", "'&&'", "'||'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "INT", "CHAR", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    void link(ASTNode* parent, ASTNode* child) {
	        parent->addChild(child);
	        if (child != NULL)
	            child->setParent(parent);
	    }

	    void link(ASTNode* parent, std::vector<ASTNode*>::iterator start, std::vector<ASTNode*>::iterator end) {
	        for (auto iter = start; iter != end; iter++)
	            link(parent, *iter);
	    }

	    UnaryExpr* createUnaryExpr(std::string op, Expr *expr) {
	        UnaryExpr *node = new UnaryExpr();
	        node->setOpcode(Expr::opcodeFromString(op));
	        link(node, expr);
	        return node;
	    }

	    BinaryExpr* createBinaryExpr(std::string op, Expr *e1, Expr *e2) {
	        BinaryExpr *node = new BinaryExpr();
	        node->setOpcode(Expr::opcodeFromString(op));
	        link(node, e1);
	        link(node, e2);
	        return node;
	    }

	public MiniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public minicc::Program * val;
		public PreambleContext preamble;
		public DeclContext decl;
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		((ProgContext)_localctx).val =  new Program();
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((ProgContext)_localctx).preamble = preamble();
			setState(47);
			((ProgContext)_localctx).decl = decl(0);

			    _localctx.val->setSyslibFlag(((ProgContext)_localctx).preamble.flag);
			    link(_localctx.val, ((ProgContext)_localctx).decl.nodes.begin(), ((ProgContext)_localctx).decl.nodes.end());
			    _localctx.val->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreambleContext extends ParserRuleContext {
		public bool flag;
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(T__0);
				setState(51);
				match(T__1);
				((PreambleContext)_localctx).flag =  true;
				}
				break;
			case T__16:
			case T__17:
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				((PreambleContext)_localctx).flag =  false;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public std::vector<ASTNode*> nodes;
		public DeclContext d1;
		public VardeclContext vardecl;
		public RettypeContext rettype;
		public FuncnameContext funcname;
		public ParametersContext parameters;
		public ScopeContext scope;
		public DeclContext d2;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public RettypeContext rettype() {
			return getRuleContext(RettypeContext.class,0);
		}
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		return decl(0);
	}

	private DeclContext decl(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclContext _localctx = new DeclContext(_ctx, _parentState);
		DeclContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_decl, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(57);
				((DeclContext)_localctx).vardecl = vardecl(0);
				_localctx.nodes.insert(_localctx.nodes.end(), ((DeclContext)_localctx).vardecl.nodes.begin(), ((DeclContext)_localctx).vardecl.nodes.end());
				}
				break;
			case 2:
				{
				setState(60);
				((DeclContext)_localctx).rettype = rettype();
				setState(61);
				((DeclContext)_localctx).funcname = funcname();
				setState(62);
				match(T__2);
				setState(63);
				((DeclContext)_localctx).parameters = parameters();
				setState(64);
				match(T__3);
				setState(65);
				((DeclContext)_localctx).scope = scope();

				    FuncDeclaration *node = new FuncDeclaration();
				    link(node, ((DeclContext)_localctx).rettype.node);
				    link(node, ((DeclContext)_localctx).funcname.node);
				    link(node, ((DeclContext)_localctx).parameters.nodes.begin(), ((DeclContext)_localctx).parameters.nodes.end());
				    link(node, ((DeclContext)_localctx).scope.node);
				    node->setHasBody(true);
				    node->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    _localctx.nodes.push_back(node);

				}
				break;
			case 3:
				{
				setState(68);
				((DeclContext)_localctx).rettype = rettype();
				setState(69);
				((DeclContext)_localctx).funcname = funcname();
				setState(70);
				match(T__2);
				setState(71);
				((DeclContext)_localctx).parameters = parameters();
				setState(72);
				match(T__3);
				setState(73);
				match(T__4);

				    FuncDeclaration *node = new FuncDeclaration();
				    link(node, ((DeclContext)_localctx).rettype.node);
				    link(node, ((DeclContext)_localctx).funcname.node);
				    link(node, ((DeclContext)_localctx).parameters.nodes.begin(), ((DeclContext)_localctx).parameters.nodes.end());
				    node->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    _localctx.nodes.push_back(node);

				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclContext(_parentctx, _parentState);
					_localctx.d1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_decl);
					setState(78);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(79);
					((DeclContext)_localctx).d2 = decl(2);

					              _localctx.nodes.insert(_localctx.nodes.end(), ((DeclContext)_localctx).d1.nodes.begin(), ((DeclContext)_localctx).d1.nodes.end());
					              _localctx.nodes.insert(_localctx.nodes.end(), ((DeclContext)_localctx).d2.nodes.begin(), ((DeclContext)_localctx).d2.nodes.end());
					          
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VardeclContext extends ParserRuleContext {
		public std::vector<ASTNode*> nodes;
		public VardeclContext vd1;
		public VartypeContext vartype;
		public VarlistContext varlist;
		public VardeclContext vd2;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		return vardecl(0);
	}

	private VardeclContext vardecl(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VardeclContext _localctx = new VardeclContext(_ctx, _parentState);
		VardeclContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_vardecl, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			((VardeclContext)_localctx).vartype = vartype();
			setState(89);
			((VardeclContext)_localctx).varlist = varlist(0);
			setState(90);
			match(T__4);

			    VarDeclaration *node = new VarDeclaration();
			    link(node, ((VardeclContext)_localctx).vartype.node);
			    link(node, ((VardeclContext)_localctx).varlist.nodes.begin(), ((VardeclContext)_localctx).varlist.nodes.end());
			    node->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
			    _localctx.nodes.push_back(node);

			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VardeclContext(_parentctx, _parentState);
					_localctx.vd1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_vardecl);
					setState(93);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(94);
					((VardeclContext)_localctx).vd2 = vardecl(2);

					              _localctx.nodes.insert(_localctx.nodes.end(), ((VardeclContext)_localctx).vd1.nodes.begin(), ((VardeclContext)_localctx).vd1.nodes.end());
					              _localctx.nodes.insert(_localctx.nodes.end(), ((VardeclContext)_localctx).vd2.nodes.begin(), ((VardeclContext)_localctx).vd2.nodes.end());
					          
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeContext extends ParserRuleContext {
		public ScopeStatement * node;
		public VardeclContext vardecl;
		public StmtlistContext stmtlist;
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public StmtlistContext stmtlist() {
			return getRuleContext(StmtlistContext.class,0);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scope);

		    ((ScopeContext)_localctx).node =  new ScopeStatement();
		    _localctx.node->setSrcLoc(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(T__5);
				setState(103);
				((ScopeContext)_localctx).vardecl = vardecl(0);
				setState(104);
				((ScopeContext)_localctx).stmtlist = stmtlist();
				setState(105);
				match(T__6);

				    _localctx.node->setNumVarDecl(((ScopeContext)_localctx).vardecl.nodes.size());
				    link(_localctx.node, ((ScopeContext)_localctx).vardecl.nodes.begin(), ((ScopeContext)_localctx).vardecl.nodes.end());
				    link(_localctx.node, ((ScopeContext)_localctx).stmtlist.nodes.begin(), ((ScopeContext)_localctx).stmtlist.nodes.end());

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(T__5);
				setState(109);
				((ScopeContext)_localctx).stmtlist = stmtlist();
				setState(110);
				match(T__6);
				link(_localctx.node, ((ScopeContext)_localctx).stmtlist.nodes.begin(), ((ScopeContext)_localctx).stmtlist.nodes.end());
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(T__5);
				setState(114);
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtlistContext extends ParserRuleContext {
		public std::vector<ASTNode*> nodes;
		public StmtContext stmt;
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtlist; }
	}

	public final StmtlistContext stmtlist() throws RecognitionException {
		StmtlistContext _localctx = new StmtlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmtlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 962104147272L) != 0)) {
				{
				{
				setState(117);
				((StmtlistContext)_localctx).stmt = stmt();
				_localctx.nodes.push_back(((StmtlistContext)_localctx).stmt.node);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public Statement * node;
		public ExprContext expr;
		public StmtContext s1;
		public StmtContext s2;
		public StmtContext stmt;
		public ExproptContext e1;
		public ExproptContext e2;
		public ExproptContext e3;
		public ScopeContext scope;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<ExproptContext> expropt() {
			return getRuleContexts(ExproptContext.class);
		}
		public ExproptContext expropt(int i) {
			return getRuleContext(ExproptContext.class,i);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}
